importFrom viopoints to make do.call work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ importFrom(graphics,box)
 importFrom(graphics,boxplot)
 importFrom(graphics,points)
 importFrom(graphics,text)
+importFrom(viopoints,viopoints)
